# Fuzzy-Framework

./: CMakeLists.txt  fuzzy.pc.in  main.cpp
core/: BinaryExpression.h  Expression.h  NaryShadowExpression.h  UnaryExpression.h
fuzzy/: Operator.h  test_operator.cpp
